# dither

./: Cargo.toml
src/: algs.rs  main.rs  vecimg.rs
