[package]
name = "dither"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# eframe = "0.23.0"
# egui_extras = { version = "0.23.0", features = ["all_loaders"] }
# env_logger = "0.10.0"
image = "0.24.7"
# egui = "0.23.0"

